Explorer Right Click Fix
- Keeps the right click menu within the window view without overflowing

--- a/src/index.css
+++ b/src/index.css
@@ -237,9 +237,9 @@ h1,h2,h3,h4,h5,h6 {
   position: absolute;
   background-color: #2b2b2b;
   border: 1px solid #11a7d4;
-  box-shadow: 2px 2px 5px rgba(0, 0, 0, 0.2);
+  box-shadow: 2px 2px 10px rgba(0, 0, 0, 0.5);
   color: rgb(218, 218, 218);
-  padding: 8px;
+  padding: 10px 0px;
   z-index: 1000;
 }
 
@@ -250,6 +250,7 @@ h1,h2,h3,h4,h5,h6 {
 
 .context-menu-item:hover {
   background-color: #e0e0e0;
+  color: #2b2b2b;
 }
 
 
